# paper-artifact-renderer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: minimal_job.json
paper_artifact_renderer/: __init__.py  cli.py  renderer.py  schema.py  verify.py
scripts/: inspect_distribution.py
tests/: test_cli.py  test_distribution_inspector.py  test_schema.py  test_verify.py
