[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-artifact-renderer"
version = "0.1.0"
description = "Offline renderer for photographed handwritten paper artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "paper-artifact-renderer contributors" }]
dependencies = [
    "pdfplumber>=0.11",
    "pillow>=10.0",
    "pypdf>=4.0",
    "reportlab>=4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
paper-artifact-renderer = "paper_artifact_renderer.cli:main"

[tool.setuptools.packages.find]
include = ["paper_artifact_renderer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
